feat: add pagination

--- a/Million.BackEnd/Million.BackEnd.Api/Million.BackEnd.Api.csproj
+++ b/Million.BackEnd/Million.BackEnd.Api/Million.BackEnd.Api.csproj
@@ -8,17 +8,21 @@
 
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="2.0.1" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="MediatR" Version="13.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
     <PackageReference Include="Ulid" Version="1.4.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Million.BackEnd.Application\Million.BackEnd.Application.csproj" />
+    <ProjectReference Include="..\Million.BackEnd.Contracts\Million.BackEnd.Contracts.csproj" />
     <ProjectReference Include="..\Million.BackEnd.Infrastructure\Million.BackEnd.Infrastructure.csproj" />
   </ItemGroup>
 
