--- a/Million.BackEnd/Million.BackEnd.Contracts/Million.BackEnd.Contracts.csproj
+++ b/Million.BackEnd/Million.BackEnd.Contracts/Million.BackEnd.Contracts.csproj
@@ -7,15 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ErrorOr" Version="2.0.1" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
-    <PackageReference Include="MediatR" Version="13.0.0" />
-    <PackageReference Include="Ulid" Version="1.4.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Million.BackEnd.Contracts\Million.BackEnd.Contracts.csproj" />
     <ProjectReference Include="..\Million.BackEnd.Domain\Million.BackEnd.Domain.csproj" />
   </ItemGroup>
 
