--- a/Million.BackEnd/Million.BackEnd.Domain/Million.BackEnd.Domain.csproj
+++ b/Million.BackEnd/Million.BackEnd.Domain/Million.BackEnd.Domain.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
+    <PackageReference Include="MongoDB.Driver" Version="3.3.0" />
     <PackageReference Include="Ulid" Version="1.4.1" />
   </ItemGroup>
 
