--- a/.gitignore
+++ b/.gitignore
@@ -385,3 +385,31 @@ snapshots-diff/
 temp
 .packages
 /src/Templates/.tempTemplateOutput
+
+#FrontEnd
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
