--- a/Million.BackEnd/Million.BackEnd.Tests/Million.BackEnd.Tests.csproj
+++ b/Million.BackEnd/Million.BackEnd.Tests/Million.BackEnd.Tests.csproj
@@ -27,6 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Million.BackEnd.Api\Million.BackEnd.Api.csproj" />
+    <ProjectReference Include="..\Million.BackEnd.Application\Million.BackEnd.Application.csproj" />
+    <ProjectReference Include="..\Million.BackEnd.Contracts\Million.BackEnd.Contracts.csproj" />
     <ProjectReference Include="..\Million.BackEnd.Domain\Million.BackEnd.Domain.csproj" />
     <ProjectReference Include="..\Million.BackEnd.Infrastructure\Million.BackEnd.Infrastructure.csproj" />
   </ItemGroup>
